apps/internal/media/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: svc-media
  labels:
    app: calibre
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
    - name: http
      port: 8083
      targetPort: http
